<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_dlog_jump"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:context=".PhotoMenu" >

    <RadioGroup
        android:id="@+id/dlog_jump_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/dlog_jump_num" >

        <RadioButton
            android:id="@+id/dlog_jump_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlog_jump_first" />

        <RadioButton
            android:id="@+id/dlog_jump_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/dlog_jump_last" />

        <RadioButton
            android:id="@+id/dlog_jump_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlog_jump_num" />

    </RadioGroup>

    <EditText
        android:id="@+id/dlog_jump_text"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:maxLines="1"
        android:inputType="text" />

</LinearLayout>
